--- a/motion/templates/bits/navigation.html
+++ b/motion/templates/bits/navigation.html
@@ -13,7 +13,10 @@
             {% if settings.featured_member %}
 
                 {# Featured user is homepage #}
-                <li class="home{% if request.path|regex_starts_with:url_group_events %} current{% endif %}">
+                <li class="home{% ifequal view 'home' %} current{% endifequal %}">
+                    <a href="{{ url_home }}">{% trans "Home" %}</a>
+                </li>
+                <li class="events{% if request.path|regex_starts_with:url_group_events %} current{% endif %}">
                     <a href="{{ url_group_events }}">{% trans "Public Timeline" %}</a>
                 </li>
                 {% if user.is_authenticated %}
