Don't really need to duplicate the profile template.

--- a/motion/templates/featured_member.html
+++ b/motion/templates/featured_member.html
@@ -1,82 +1,1 @@
-{% extends "base.html" %}
-{% load i18n %}
-
-{% block head_title %}{% blocktrans with block.super as super and member.display_name as name %}{{ super }}: {{ name }}'s Profile{% endblocktrans %}{% endblock %}
-{% block page_id %}user-profile{% endblock %}
-
-{% block feed %}
-    <link rel="alternate" type="application/atom+xml" title="{% blocktrans with member.display_name as name %}Recent Entries from {{ name }}{% endblocktrans %}" href="{{ member.feed_url }}" />
-{% endblock %}
-
-{% block beta_widgets %}
-    {% if user.is_superuser %}
-        <div class="admin-options">
-            <p><strong>Admin options:</strong></p>
-            {% if member.email %}
-                <p><a href="mailto:{{ member.email }}">{% blocktrans with member.display_name as name %}Email {{ name }}{% endblocktrans %}</a></p>
-            {% endif %}
-            <!--p><a href="">{% blocktrans with member.display_name as name %}Ban {{ name }}{% endblocktrans %}</a></p-->
-        </div>
-    {% endif %}
-    {% include "widgets/typepad_frame.html" %}
-    {% include "widgets/elsewhere.html" %}
-{% endblock %}
-
-{% block content_body %}
-    <div class="profile-header">
-        <div class="userpic">
-            {% with member.links.rel__avatar.width__100 as userpic %}
-            <img src="{{ userpic.href }}" width="100" height="100" alt="{{ member.display_name }}" />
-            {% endwith %}
-        </div>
-
-        <div class="profile-header-content">
-            <h1>{{ member.display_name }}</h1>
-
-            <ul class="profile-data">
-
-            {% if member.about_me %}
-            <li><strong>{% trans "About Me:" %}</strong> {{ member.about_me }}</em></li>
-            {% endif %}
-            
-            {% if member.location %}
-            <li><strong>{% trans "Location:" %}</strong> {{ member.location }}</em></li>
-            {% endif %}
-
-            {% if member.interests %}
-            <li><strong>{% trans "Interests:" %}</strong>
-                {% for interest in member.interests %}
-                {{ interest }}{% if not forloop.last %}, {% endif %}
-                {% endfor %}
-            </li>
-            {% endif %}
-
-            {% if twitter_username %}
-            <li class="user-twitter" id="twitter_status"></li>
-            {% endif %}
-
-            <li><img src="{{ settings.media_url }}images/services/typepad.png" height="16" width="16" alt="TypePad" />&nbsp;<a href="{{ member.typepad_url }}" rel="me">
-            {% if is_self %}
-                {% trans "Edit my TypePad profile" %}
-            {% else %}
-                {% blocktrans with member.display_name as name %}View {{ name }}&rsquo;s full TypePad profile{% endblocktrans %}
-            {% endif %}
-            </a></li>
-
-            </ul>
-        </div>
-    </div>
-    
-    {% include "bits/profile.html" %}
-
-    <div class="actions">
-        <h2>Recent Activity</h2>
-        {% with page_obj.object_list as events %}
-        {% include "bits/event_list.html" %}
-        {% endwith %}
-    </div>
-
-    {% if twitter_username %}
-    <script type="text/javascript" src="http://profile.typepad.com/services/embed/twitter_status.js?u={{ twitter_username|iriencode }}" defer="defer"></script>
-    {% endif %}
-{% endblock %}
+{% extends "member.html" %}
