Fix for posting button in safari because it didn't like the other way this was done.

--- a/motion/static/theme/style.css
+++ b/motion/static/theme/style.css
@@ -140,6 +140,7 @@ p {
 }
 .submit-wrapper button.posting {
     background-image: url(images/post-it-bg-disabled.png);
+    display: none;
 }
 #content-inner {
     margin: 0;
