--- a/motion/templates/bits/compose_form.html
+++ b/motion/templates/bits/compose_form.html
@@ -75,6 +75,7 @@
                                                 {% endif %}
                                                 {% endif %}
                                                 <button id="post-submit" name="post" value="Post">{% trans "Post It!" %}</button>
+                                                <button id="post-submit-posting" class="posting" name="posting" value="Posting" disabled="true">{% trans "Posting..." %}</button>
                                             </p>
                                         </form>
                                     </div><!-- end #compose-content -->
