--- a/motion/templates/member.html
+++ b/motion/templates/member.html
@@ -56,7 +56,7 @@
             {% endif %}
 
             <li><img src="{{ settings.media_url }}images/services/typepad.png" height="16" width="16" alt="TypePad" />&nbsp;
-                <a href="{{ member.typepad_url }}" rel="me">{% if is_self %}{% trans "Edit my TypePad profile" %}{% else %}{% blocktrans with member.display_name as name %}View {{ name }}&rsquo;s full TypePad profile{% endblocktrans %}{% endif %}</a>
+                <a href="{{ member.typepad_url }}" rel="me" target="_blank">{% if is_self %}{% trans "Edit my TypePad profile" %}{% else %}{% blocktrans with member.display_name as name %}View {{ name }}&rsquo;s full TypePad profile{% endblocktrans %}{% endif %}</a>
             </li>
 
             </ul>
