Add 'html' field for API links (such as enclosures with video embed code) Elaborate video asset include to show video embeds

--- a/motion/templates/assets/body/video.html
+++ b/motion/templates/assets/body/video.html
@@ -1,1 +1,16 @@
 {% extends "assets/body/base.html" %}
+
+{% block content %}
+
+<div>
+    <a href="{{ entry.get_absolute_url }}">
+
+        {% for video in entry.links.rel__enclosure %}
+            {% autoescape off %}{{ video.html }}{% endautoescape %}
+        {% endfor %}
+
+    </a>
+</div>
+
+{% endblock %}
+
