--- a/motion/templates/assets/bits/footer.html
+++ b/motion/templates/assets/bits/footer.html
@@ -19,6 +19,21 @@
         {% blocktrans with entry.author.get_absolute_url as url and entry.author.display_name as name %}
             posted by <span class="vcard author"><a href="{{ url }}">{{ name }}</a></span>
         {% endblocktrans %}
+
+        {% if entry.source %}
+        <span class="source">
+            to
+            {% with entry.source.original_link.href as original_href %}
+                {% if entry.source.provider %}
+                    <a href="{{ original_href }}"><img src="{{ entry.source.provider.icon }}" /></a>
+                    <a href="{{ original_href }}">{{ entry.source.provider.name }}</a>
+                {% else %}
+                    {{ original_href|urlizetrunc:35 }}
+                {% endif %}
+            {% endwith %}
+        </span>
+        {% endif %}
+
         <span class="date">
             <abbr class="published" title="{{ entry.published|date_microformat }}">
                 {% spaceless %}
