--- a/motion/templates/assets/body/base.html
+++ b/motion/templates/assets/body/base.html
@@ -1,16 +1,23 @@
 {# base template for entry content #}
 {% load typepad_filters %}
 
-{% block title %}{% if entry.title %}<h2><a href="{{ entry.get_absolute_url }}">{{ entry.title }}</a></h2>{% endif %}{% endblock %}
+{% block title %}{% if entry.title %}<h2><a href="{{ entry.get_absolute_url }}">{% spaceless %}
+    {% if entry.source %}
+        {% autoescape off %}{{ entry.title }}{% endautoescape %}
+    {% else %}
+        {{ entry.title }}
+    {% endif %}
+{% endspaceless %}</a></h2>{% endif %}{% endblock %}
 {% block media %}{% endblock %}
 {% block activity %}{% endblock %}
 {% block content %}
 {% if entry.content %}
-    {% ifequal view "home" %}
-        {{ entry.content|urlize|linebreaks|truncatewords:settings.paragraph_wordcount }}
-        {{ entry|morelink:settings.paragraph_wordcount }}
+    {% if entry.source %}
+        {% autoescape off %}
+            {% include "assets/bits/content.html" %}
+        {% endautoescape %}
     {% else %}
-        {{ entry.content|urlize|linebreaks }}
-    {% endifequal %}
+        {% include "assets/bits/content.html" %}
+    {% endif %}
 {% endif %}
 {% endblock %}
