--- a/motion/static/theme/style.css
+++ b/motion/static/theme/style.css
@@ -365,6 +365,9 @@ p {
 .group-events #user-compose-friends-inner {
     margin-bottom: 10px;
 }
+#featured-member-compose {
+    margin: 20px 0 20px 10px;
+}
 #user-username {
     font-size: large;
     line-height: 1.5em;
