--- a/motion/templates/member.html
+++ b/motion/templates/member.html
@@ -24,6 +24,7 @@
 
 {% block content_body %}
     <div class="profile-header">
+
         <div class="userpic">
             {% with member.links.rel__avatar.width__100 as userpic %}
             <img src="{{ userpic.href }}" width="100" height="100" alt="{{ member.display_name }}" />
@@ -68,6 +69,12 @@
     </div>
     
     {% include "bits/profile.html" %}
+    
+    {% if is_self and user.is_featured_member %}
+    <div id="featured-member-compose" class="pkg">
+        {% include "bits/compose_form.html" %}
+    </div>
+    {% endif %}
 
     <div class="actions">
         <h2>Recent Activity</h2>
