--- a/motion/templates/widgets/following.html
+++ b/motion/templates/widgets/following.html
@@ -3,12 +3,14 @@
     <h3 class="design-highlight-color">{% trans "Following" %}</h3>
     <div class="widget-content">
         <div class="summary">
-            <label>
+            <a href="{% url following userid=member.url_id %}">
+            <span class="label">
                 {% trans "Following" %}
-            </label>
+            </span>
             <span class="count">
                 {{ following.total_results }}
             </span>
+            </a>
         </div>
         <ul>
             {% for rel in following %}
@@ -20,7 +22,7 @@
             {% endfor %}
         </ul>
         {% if following %}
-        <div class="more"><a href="{% url following userid=member.url_id %}">
+        <div class="more"><a href="{% url following userid=member.url_id %}" title="View all">
         {% ifequal view "home" %}
             &gt;&gt;
         {% else %}
