--- a/motion/templates/assets/bits/delete.html
+++ b/motion/templates/assets/bits/delete.html
@@ -7,7 +7,7 @@
         <button class="button-delete" type="submit"
             onclick="return confirm(
             {% blocktrans with entry.type_id as type %}
-                'Are you sure you want to delete this {{ type }}?'
+                'Are you sure you want to delete this {{ type }}? This action cannot be undone.'
             {% endblocktrans %}
             );" name="delete" title=
             {% blocktrans with entry.type_id as type %}
