--- a/motion/templates/assets/body/audio.html
+++ b/motion/templates/assets/body/audio.html
@@ -4,6 +4,6 @@
 
 {% block media %}
 <ul class="graphic">
-    <li><a href="{{ entry.link }}#.mp3">{{ entry.title }}</a></li>
+    <li><a href="{{ entry.link }}#.mp3" title="click to play">{{ entry.title }}</a></li>
 </ul>
 {% endblock %}
