Changed "submit" to "post" on comment form button.

--- a/motion/templates/permalink.html
+++ b/motion/templates/permalink.html
@@ -56,7 +56,7 @@
             <form method="post" action="" name="comments_form" id="comments-form">
                 <div>{{ form.body }}</div>
                 <div>
-                    <button id="comment-submit" name="comment" value="Submit">{% trans "Submit" %}</button>
+                    <button id="comment-submit" name="comment" value="Submit">{% trans "Post" %}</button>
                 </div>
             </form>
         </div>
