--- a/motion/templates/permalink.html
+++ b/motion/templates/permalink.html
@@ -33,40 +33,44 @@
     </div>
 
     <div id="comments" class="actions comments">
-        <div id="comments-list">
-            <h2 class="comments-header">
-                {% blocktrans count comments.total_results as count %}
-                    {{ count }} Comment
-                {% plural %}
-                    {{ count }} Comments
-                {% endblocktrans %}
-                {% if not user.is_authenticated %}
-                    {% url login as login_url %}
-                    {% url register as register_url %}
-                    {% blocktrans with request.group.display_name as group_name and request.path|urlencode as next %}
-                    | <a href="{{ login_url }}?next={{ next }}">Sign in</a> or <a href="{{ register_url }}">join {{ group_name }}</a> to add a comment.
+    
+        {% if comments %}
+            <div id="comments-list">
+                <h2 class="comments-header">
+                    {% blocktrans count comments.total_results as count %}
+                        {{ count }} Comment
+                    {% plural %}
+                        {{ count }} Comments
                     {% endblocktrans %}
-                {% endif %}
-            </h2>
-            <div id="comments-content" class="comments-content">
-            {% for comment in comments %}
-                {% include "assets/comment.html" %}
-            {% endfor %}
-            </div>
-        </div>
-
-        <a href="#comments-list" id="more-comments" style="display:none;">{% trans "Load more comments" %}</a>
-
-        {% if settings.allow_commenting and user.is_authenticated %}
-        <div class="comments-open" id="comments-open">
-            <h2 class="comments-open-header">{% trans "Leave a comment" %}</h2>
-            <form method="post" action="" name="comments_form" id="comments-form">
-                <div>{{ form.body }}</div>
-                <div>
-                    <button id="comment-submit" name="comment" value="Submit">{% trans "Post" %}</button>
+                </h2>
+                <div id="comments-content" class="comments-content">
+                {% for comment in comments %}
+                    {% include "assets/comment.html" %}
+                {% endfor %}
                 </div>
-            </form>
-        </div>
+            </div>
+            <a href="#comments-list" id="more-comments" style="display:none;">{% trans "Load more comments" %}</a>
+        {% endif %}
+
+        {% if settings.allow_commenting %}
+            <div class="comments-open" id="comments-open">
+            {% if user.is_authenticated %}
+                <h2 class="comments-open-header">{% trans "Leave a comment" %}</h2>
+                <form method="post" action="" name="comments_form" id="comments-form">
+                    <div>{{ form.body }}</div>
+                    <div>
+                        <button id="comment-submit" name="comment" value="Submit">{% trans "Post" %}</button>
+                    </div>
+                </form>
+            {% else %}
+                {% url login as login_url %}
+                {% url register as register_url %}
+                {% blocktrans with request.group.display_name as group_name and request.path|urlencode as next %}
+                <h2 class="comments-open-header">
+                    <a href="{{ login_url }}?next={{ next }}">Sign in</a> or <a href="{{ register_url }}">join {{ group_name }}</a> to add a comment.
+                {% endblocktrans %}
+            {% endif %}
+            </div>
         {% endif %}
 
     </div>
